# minigen

./: .gitignore  README.md  pyproject.toml
src/minigen/: cli.py
src/minigen/cli/: ensembl.py  fasta.py  main.py  mcscanx.py
src/minigen/commands/: build.py  collect.py  detect.py  extract.py  generate.py  identify.py  tag.py  transform.py
src/minigen/core/: bed4mcscanx.py  bed6.py  blast.py  fasta.py  gff3.py  homologs.py  mcscanx_bed4.py  tree.py
src/minigen/core/ensembl/: io.py  utils.py
src/minigen/core/fasta/: io.py  utils.py
src/minigen/core/mcscanx/: io.py  utils.py
src/minigen/io/: bed4mcscanx.py  bed6.py  blast.py  fasta.py  gff3.py  homologs.py  homology_table.py  mcscanx_bed4.py  stdout.py  text.py  tree.py
src/minigen/utils/: homologs.py
